// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`findVaultSwapData > gets the vault swap data (ArbEth) 1`] = `
{
  "affiliateFees": [],
  "amount": 10000000n,
  "brokerFee": {
    "account": null,
    "commissionBps": 10,
  },
  "ccmDepositMetadata": null,
  "dcaParams": null,
  "depositAddress": "tb1pjpqkt5ghr3lts922ykufct49trhmkjesmvmrfrq88w7fd0ewwtaq0da2gg",
  "depositChainBlockHeight": 3902357,
  "destinationAddress": "0xa56a6be23b6cf39d9448ff6e897c29c41c8fbdff",
  "inputAsset": "Btc",
  "maxBoostFee": 15,
  "outputAsset": "ArbEth",
  "refundParams": {
    "maxOraclePriceSlippage": null,
    "minPrice": 34028236692093846346337460743176821145600000000000n,
    "refundAddress": "tb1pdz3akc5wa2gr69v3x87tfg0ka597dxqvfl6zhqx4y202y63cgw0q3rgpm6",
    "retryDuration": 90,
  },
}
`;

exports[`findVaultSwapData > gets the vault swap data (Btc) 1`] = `
{
  "affiliateFees": [
    {
      "accountIndex": 2,
      "commissionBps": 20,
    },
  ],
  "amount": 10000n,
  "brokerFee": {
    "account": null,
    "commissionBps": 20,
  },
  "ccmDepositMetadata": null,
  "dcaParams": null,
  "depositAddress": "tb1pjpqkt5ghr3lts922ykufct49trhmkjesmvmrfrq88w7fd0ewwtaq0da2gg",
  "depositChainBlockHeight": 3902357,
  "destinationAddress": "tb1qhjurnfz4qah4rg7ntue6x287ehdvded20rj9vh",
  "inputAsset": "Btc",
  "maxBoostFee": 5,
  "outputAsset": "Btc",
  "refundParams": {
    "maxOraclePriceSlippage": 5,
    "minPrice": 3402823669209384634633746074317682114560000n,
    "refundAddress": "tb1qhjurnfz4qah4rg7ntue6x287ehdvded20rj9vh",
    "retryDuration": 50,
  },
}
`;

exports[`findVaultSwapData > gets the vault swap data (Dot) 1`] = `
{
  "affiliateFees": [
    {
      "accountIndex": 1,
      "commissionBps": 10,
    },
  ],
  "amount": 100000n,
  "brokerFee": {
    "account": null,
    "commissionBps": 0,
  },
  "ccmDepositMetadata": null,
  "dcaParams": null,
  "depositAddress": "tb1pjpqkt5ghr3lts922ykufct49trhmkjesmvmrfrq88w7fd0ewwtaq0da2gg",
  "depositChainBlockHeight": 3902357,
  "destinationAddress": "167ZvRqc7V6HrEUSvtV8c3JRUtPjJhHXUpAwhmPktAGj1uzq",
  "inputAsset": "Btc",
  "maxBoostFee": 0,
  "outputAsset": "Dot",
  "refundParams": {
    "maxOraclePriceSlippage": null,
    "minPrice": 34028236692093846346337460743176821145600000n,
    "refundAddress": "tb1qhjurnfz4qah4rg7ntue6x287ehdvded20rj9vh",
    "retryDuration": 69,
  },
}
`;

exports[`findVaultSwapData > gets the vault swap data (Eth) 1`] = `
{
  "affiliateFees": [],
  "amount": 100000000n,
  "brokerFee": {
    "account": null,
    "commissionBps": 5,
  },
  "ccmDepositMetadata": null,
  "dcaParams": null,
  "depositAddress": "tb1pjpqkt5ghr3lts922ykufct49trhmkjesmvmrfrq88w7fd0ewwtaq0da2gg",
  "depositChainBlockHeight": 3902357,
  "destinationAddress": "0xa56a6be23b6cf39d9448ff6e897c29c41c8fbdff",
  "inputAsset": "Btc",
  "maxBoostFee": 30,
  "outputAsset": "Eth",
  "refundParams": {
    "maxOraclePriceSlippage": null,
    "minPrice": 3402823669209384634633746074317682114560000000000n,
    "refundAddress": "tb1qvwmuc3pjhwju287sjs5vg7467t2jlymn35lwsj",
    "retryDuration": 100,
  },
}
`;

exports[`findVaultSwapData > gets the vault swap data (HubDot) 1`] = `
{
  "affiliateFees": [
    {
      "accountIndex": 1,
      "commissionBps": 10,
    },
  ],
  "amount": 100000n,
  "brokerFee": {
    "account": null,
    "commissionBps": 0,
  },
  "ccmDepositMetadata": null,
  "dcaParams": null,
  "depositAddress": "tb1pjpqkt5ghr3lts922ykufct49trhmkjesmvmrfrq88w7fd0ewwtaq0da2gg",
  "depositChainBlockHeight": 3902357,
  "destinationAddress": "167ZvRqc7V6HrEUSvtV8c3JRUtPjJhHXUpAwhmPktAGj1uzq",
  "inputAsset": "Btc",
  "maxBoostFee": 0,
  "outputAsset": "HubDot",
  "refundParams": {
    "maxOraclePriceSlippage": 1,
    "minPrice": 34028236692093846346337460743176821145600000n,
    "refundAddress": "tb1qhjurnfz4qah4rg7ntue6x287ehdvded20rj9vh",
    "retryDuration": 69,
  },
}
`;

exports[`findVaultSwapData > gets the vault swap data (Sol) 1`] = `
{
  "affiliateFees": [],
  "amount": 1000000n,
  "brokerFee": {
    "account": null,
    "commissionBps": 15,
  },
  "ccmDepositMetadata": null,
  "dcaParams": {
    "chunkInterval": 100,
    "numberOfChunks": 20,
  },
  "depositAddress": "tb1pjpqkt5ghr3lts922ykufct49trhmkjesmvmrfrq88w7fd0ewwtaq0da2gg",
  "depositChainBlockHeight": 3902357,
  "destinationAddress": "A8dScaeGChTgzvok95uVAxd44LRkq5ckcpppNVQwkLQb",
  "inputAsset": "Btc",
  "maxBoostFee": 10,
  "outputAsset": "Sol",
  "refundParams": {
    "maxOraclePriceSlippage": null,
    "minPrice": 340282366920938463463374607431768211456000n,
    "refundAddress": "tb1qhjurnfz4qah4rg7ntue6x287ehdvded20rj9vh",
    "retryDuration": 80,
  },
}
`;

exports[`findVaultSwapData > returns null for block if no hash found 1`] = `
{
  "affiliateFees": [],
  "amount": 100000000n,
  "brokerFee": {
    "account": null,
    "commissionBps": 0,
  },
  "ccmDepositMetadata": null,
  "dcaParams": {
    "chunkInterval": 1,
    "numberOfChunks": 2,
  },
  "depositAddress": "tb1pjpqkt5ghr3lts922ykufct49trhmkjesmvmrfrq88w7fd0ewwtaq0da2gg",
  "depositChainBlockHeight": null,
  "destinationAddress": "0xa56a6be23b6cf39d9448ff6e897c29c41c8fbdff",
  "inputAsset": "Btc",
  "maxBoostFee": 0,
  "outputAsset": "Eth",
  "refundParams": {
    "maxOraclePriceSlippage": null,
    "minPrice": 3402823669209384634633746074317682114560000000000n,
    "refundAddress": "tb1qhjurnfz4qah4rg7ntue6x287ehdvded20rj9vh",
    "retryDuration": 100,
  },
}
`;

exports[`findVaultSwapData > returns null for block if no hash found 2`] = `
{
  "affiliateFees": [],
  "amount": 100000000n,
  "brokerFee": {
    "account": null,
    "commissionBps": 0,
  },
  "ccmDepositMetadata": null,
  "dcaParams": {
    "chunkInterval": 1,
    "numberOfChunks": 2,
  },
  "depositAddress": "tb1pjpqkt5ghr3lts922ykufct49trhmkjesmvmrfrq88w7fd0ewwtaq0da2gg",
  "depositChainBlockHeight": null,
  "destinationAddress": "0xa56a6be23b6cf39d9448ff6e897c29c41c8fbdff",
  "inputAsset": "Btc",
  "maxBoostFee": 0,
  "outputAsset": "Eth",
  "refundParams": {
    "maxOraclePriceSlippage": null,
    "minPrice": 3402823669209384634633746074317682114560000000000n,
    "refundAddress": "tb1qhjurnfz4qah4rg7ntue6x287ehdvded20rj9vh",
    "retryDuration": 100,
  },
}
`;

exports[`findVaultSwapData > returns null for block if no hash found 3`] = `
{
  "affiliateFees": [],
  "amount": 100000000n,
  "brokerFee": {
    "account": null,
    "commissionBps": 0,
  },
  "ccmDepositMetadata": null,
  "dcaParams": {
    "chunkInterval": 1,
    "numberOfChunks": 2,
  },
  "depositAddress": "tb1pjpqkt5ghr3lts922ykufct49trhmkjesmvmrfrq88w7fd0ewwtaq0da2gg",
  "depositChainBlockHeight": null,
  "destinationAddress": "0xa56a6be23b6cf39d9448ff6e897c29c41c8fbdff",
  "inputAsset": "Btc",
  "maxBoostFee": 0,
  "outputAsset": "Eth",
  "refundParams": {
    "maxOraclePriceSlippage": null,
    "minPrice": 3402823669209384634633746074317682114560000000000n,
    "refundAddress": "tb1qhjurnfz4qah4rg7ntue6x287ehdvded20rj9vh",
    "retryDuration": 100,
  },
}
`;

exports[`findVaultSwapData > returns null for block if the block isn't found 1`] = `
{
  "affiliateFees": [],
  "amount": 100000000n,
  "brokerFee": {
    "account": null,
    "commissionBps": 0,
  },
  "ccmDepositMetadata": null,
  "dcaParams": {
    "chunkInterval": 1,
    "numberOfChunks": 2,
  },
  "depositAddress": "tb1pjpqkt5ghr3lts922ykufct49trhmkjesmvmrfrq88w7fd0ewwtaq0da2gg",
  "depositChainBlockHeight": null,
  "destinationAddress": "0xa56a6be23b6cf39d9448ff6e897c29c41c8fbdff",
  "inputAsset": "Btc",
  "maxBoostFee": 0,
  "outputAsset": "Eth",
  "refundParams": {
    "maxOraclePriceSlippage": null,
    "minPrice": 3402823669209384634633746074317682114560000000000n,
    "refundAddress": "tb1qhjurnfz4qah4rg7ntue6x287ehdvded20rj9vh",
    "retryDuration": 100,
  },
}
`;

exports[`findVaultSwapData > returns null for block if the request fails 1`] = `
{
  "affiliateFees": [],
  "amount": 100000000n,
  "brokerFee": {
    "account": null,
    "commissionBps": 0,
  },
  "ccmDepositMetadata": null,
  "dcaParams": {
    "chunkInterval": 1,
    "numberOfChunks": 2,
  },
  "depositAddress": "tb1pjpqkt5ghr3lts922ykufct49trhmkjesmvmrfrq88w7fd0ewwtaq0da2gg",
  "depositChainBlockHeight": null,
  "destinationAddress": "0xa56a6be23b6cf39d9448ff6e897c29c41c8fbdff",
  "inputAsset": "Btc",
  "maxBoostFee": 0,
  "outputAsset": "Eth",
  "refundParams": {
    "maxOraclePriceSlippage": null,
    "minPrice": 3402823669209384634633746074317682114560000000000n,
    "refundAddress": "tb1qhjurnfz4qah4rg7ntue6x287ehdvded20rj9vh",
    "retryDuration": 100,
  },
}
`;
